refactor: nickname -> playerName으로 통일